[project]
name = "houdini_modules"
version = "0.1.6"
description = "Houdini node python modules"
readme = "README.md"
authors = [
    { name = "andrew", email = "andrew-whatling@hotmail.co.uk" }
]
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["uv_build >= 0.9.21, <0.10.0"]
build-backend = "uv_build"

[tool.uvbuild]
src = "src"

